# mpc_benchmark

./: README.md
mpc_osqp_benchmark/: CMakeLists.txt  main.cpp
mpc_osqp_benchmark/mpc_osqp/: mpc_osqp.cpp  mpc_osqp.h
mpc_osqp_benchmark/osqp/include/qdldl/: qdldl_types.h
mpc_osqp_benchmark/osqp/src/: lib_handler.c
mpc_qpOASES_benchmark/: CMakeLists.txt  main.cpp
mpc_qpOASES_benchmark/qp_solver/: active_set_qp_solver.cc  active_set_qp_solver.h  qp_solver.cc  qp_solver.h  qp_solver_gflags.cc
